--- a/index.html
+++ b/index.html
@@ -1,95 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yuliia K</title>
-    <!-- CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
-    <!-- JavaScript Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg fixed-top bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Yuliia</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    
-    <h2 class="text-center">✨ Вітаю! I am</h2>
-    <h1 class="text-center">Yuliia</h1>
-    <h3 class="text-center">🇺🇦 Front-end developer, based in Kyiv, Ukraine</h3>
-    <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
-    </div>
 
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <img src="images/yoga.png" alt="Yoga App picture" class="img-fluid rounded" />
-        </div>
-        <div class="col-md-6">
-          <h2 class="mb-3">Yoga App</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</p>
-          <div class="mt-5">
-            <a href="#" class="main-link">Lanch Yoga App</a></div>
-          </div>
-        </div>
-      <div class="row mt-5">
-        <div class="col-md-6">
-          <h2 class="mb-3">Weather App</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</p>
-          <div class="mt-5">
-            <a href="#" class="main-link">Lanch Weather App</a></div>
-          </div>
-        <div class="col-md-6"><img src="images/weather.png" alt="Weather App picture" class="img-fluid rounded" /></div>
-        </div>
-      <div class="row mt-5">
-        <div class="col-md-6"><img src="images/yogurt.png" alt="Yogurt page" class="img-fluid rounded" /></div>
-        <div class="col-md-6">
-          <h2 class="mb-3">Yogurt App</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</p>
-          <div class="mt-5">
-            <a href="#" class="main-link">Lanch Yogurt App</a></div>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Yuliia K</title>
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="/style/style.css" />
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg fixed-top bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">Yuliia</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about.html">About me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about.html#contact">Contact me</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <h2 class="text-center">✨ Вітаю! I am</h2>
+  <h1 class="text-center">Yuliia</h1>
+  <h3 class="text-center">🇺🇦 Front-end developer, based in Kyiv, Ukraine</h3>
+  <div class="navigation-links">
+    <a href="/about.html#contact" class="contact-link">Contact me</a>
+    <a href="/about.html" class="about-link">About me</a>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <img src="images/yoga.png" alt="Yoga App picture" class="img-fluid rounded" />
+      </div>
+      <div class="col-md-6">
+        <h2 class="mb-3">Yoga App</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam
+          quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum
+          dolore.</p>
+        <div class="mt-5">
+          <a href="#" class="main-link">Lanch Yoga App</a>
         </div>
       </div>
     </div>
-  </body>
+    <div class="row mt-5">
+      <div class="col-md-6">
+        <h2 class="mb-3">Weather App</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam
+          quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum
+          dolore.</p>
+        <div class="mt-5">
+          <a href="#" class="main-link">Lanch Weather App</a>
+        </div>
+      </div>
+      <div class="col-md-6"><img src="images/weather.png" alt="Weather App picture" class="img-fluid rounded" /></div>
+    </div>
+    <div class="row mt-5">
+      <div class="col-md-6"><img src="images/yogurt.png" alt="Yogurt page" class="img-fluid rounded" /></div>
+      <div class="col-md-6">
+        <h2 class="mb-3">Yogurt App</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam
+          quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum
+          dolore.</p>
+        <div class="mt-5">
+          <a href="#" class="main-link">Lanch Yogurt App</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+</body>
+
 </html>
