--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Yuliia K</title>
+  <meta name="description" content="Main page of portfolio project for SheCodes Responsive Workshop">
+  <title>Future front-end dev from UA - Yuliia K.</title>
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
@@ -44,8 +45,8 @@
   <h1 class="text-center">Yuliia</h1>
   <h3 class="text-center">🇺🇦 Front-end developer, based in Kyiv, Ukraine</h3>
   <div class="navigation-links">
-    <a href="/about.html#contact" class="contact-link">Contact me</a>
-    <a href="/about.html" class="about-link">About me</a>
+    <a href="/about.html#contact" class="contact-link" title="Get in touch with Yuliia">Contact me</a>
+    <a href="/about.html" class="about-link" title="Learn more about Yuliia">About me</a>
   </div>
 
   <div class="container">
@@ -59,7 +60,7 @@
           quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum
           dolore.</p>
         <div class="mt-5">
-          <a href="#" class="main-link">Lanch Yoga App</a>
+          <a href="#" class="main-link" title="Go to Yoga App">Lanch Yoga App</a>
         </div>
       </div>
     </div>
@@ -70,7 +71,7 @@
           quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum
           dolore.</p>
         <div class="mt-5">
-          <a href="#" class="main-link">Lanch Weather App</a>
+          <a href="#" class="main-link" title="Go to Weather App">Lanch Weather App</a>
         </div>
       </div>
       <div class="col-md-6"><img src="images/weather.png" alt="Weather App picture" class="img-fluid rounded" /></div>
@@ -83,7 +84,7 @@
           quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum
           dolore.</p>
         <div class="mt-5">
-          <a href="#" class="main-link">Lanch Yogurt App</a>
+          <a href="#" class="main-link" title="Go to Yogurt App">Lanch Yogurt App</a>
         </div>
       </div>
     </div>
