--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <img src="images/yoga.png" alt="Yoga App picture" class="img-fluid rounded" />
+        <img src="images/yoga.png" alt="Yoga App picture" class="img-fluid rounded d-none d-sm-block" />
       </div>
       <div class="col-md-6">
         <h2 class="mb-3">Yoga App</h2>
@@ -74,10 +74,12 @@
           <a href="#" class="main-link" title="Go to Weather App">Lanch Weather App</a>
         </div>
       </div>
-      <div class="col-md-6"><img src="images/weather.png" alt="Weather App picture" class="img-fluid rounded" /></div>
+      <div class="col-md-6"><img src="images/weather.png" alt="Weather App picture"
+          class="img-fluid rounded d-none d-sm-block" /></div>
     </div>
     <div class="row mt-5">
-      <div class="col-md-6"><img src="images/yogurt.png" alt="Yogurt page" class="img-fluid rounded" /></div>
+      <div class="col-md-6"><img src="images/yogurt.png" alt="Yogurt page"
+          class="img-fluid rounded d-none d-sm-block" /></div>
       <div class="col-md-6">
         <h2 class="mb-3">Yogurt App</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam
