Some SEO improvements

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Basic information about coder and sample projects">
+  <meta name="description" content="Get to know me, my sample projects and ways to contact">
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
@@ -20,7 +20,7 @@
 <body>
   <nav class="navbar navbar-expand-lg fixed-top bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/index.html">Yuliia</a>
+      <a class="navbar-brand" href="/index.html" title="Main page">Yuliia</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -31,10 +31,10 @@
             <a class="nav-link" href="/index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/about.html">About me</a>
+            <a class="nav-link active" aria-current="page" href="/about.html" title="Learn about Yuliia">About me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html#contact">Contact me</a>
+            <a class="nav-link" href="/about.html#contact" title="Get in touch with Yuliia">Contact me</a>
           </li>
         </ul>
       </div>
