--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <nav class="navbar navbar-expand-lg fixed-top bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">Yuliia</a>
+      <a class="navbar-brand" href="index.html" title="Main page">Yuliia</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -31,10 +31,10 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About me</a>
+            <a class="nav-link" href="/about.html" title="Learn about Yuliia">About me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html#contact">Contact me</a>
+            <a class="nav-link" href="/about.html#contact" title="Get in touch with Yuliia">Contact me</a>
           </li>
         </ul>
       </div>
